alterado o primeiro topico

--- a/portal/index.html
+++ b/portal/index.html
@@ -36,8 +36,8 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Tópico</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>ENEM 2019</h2>
+							<p>O Exame Nacional do Ensino Médio recebeu mais de 6 milhões de inscrições neste ano. O número final de participantes só será conhecido após quinta-feira (23), data final para o pagamento da inscrição.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Visualizar sobre</a></li>
 							</ul>
