alterado segundo topico

--- a/portal/index.html
+++ b/portal/index.html
@@ -50,8 +50,8 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tópico</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Crise no Ministério da Educação</h2>
+							<p>Após cinco meses de governo Bolsonaro, nos resta a conjuntura política atual: o que será da educação brasileira nos próximos anos? Dada a mobilização nacional feita no dia 15, quarta-feira passada, promovida por estudantes, professores e demais atuantes na área da educação.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Visualizar sobre</a></li>
 							</ul>
